added the endpoints
