# SellerApp-API-Gateway/pkg/order_svc/routes.go
@@ -17,6 +17,8 @@ func RegisterRoutes(r *gin.Engine, c *config.Config, authSvc *auth.ServiceClient
 
 	order.Use(auth.AuthRequired)
 	order.POST("/", svc.CreateOrder)
+	order.PUT("/",svc.UpdateOrder)
+	order.GET("/",svc.FetchOrder)
 
 	return svc
 }
@@ -24,3 +26,12 @@ func RegisterRoutes(r *gin.Engine, c *config.Config, authSvc *auth.ServiceClient
 func (svc *ServiceClient) CreateOrder(ctx *gin.Context) {
 	routes.CreateOrder(ctx, svc.Client)
 }
+
+func (svc *ServiceClient) FetchOrder(ctx *gin.Context) {
+	routes.FetchOrder(ctx, svc.Client)
+}
+
+func (svc *ServiceClient) UpdateOrder(ctx *gin.Context) {
+	routes.UpdateOrder(ctx, svc.Client)
+}
+
